syntax = "proto3";

message BagItem {
	uint64 Guid = 1;
	int32  ItemID = 2;
	int32  ItemNum = 3;
	int32  ItemGuid = 4;
	int32   BagType = 5;		//背包类型
	bool    Bind = 6;			//是否是邦定
}

message BagChangeNty{
	repeated BagItem ChangeList = 1;
	repeated uint64  RemoveList = 2;
}

message EquipItem {
	uint64 Guid = 1;
	int32  ItemID = 2;
}

message EquipChangeNty{
	repeated BagItem ChangeList = 1;
	repeated uint64  RemoveList = 2;
}

message PetItem {
	uint64 Guid = 1;
	int32  ItemID = 2;
}

message PetChangeNty{
	repeated BagItem ChangeList = 1;
	repeated uint64  RemoveList = 2;
}

message PartnerItem {
	uint64 Guid = 1;
	int32  ItemID = 2;
}

message PartnerChangeNty{
	repeated BagItem ChangeList = 1;
	repeated uint64  RemoveList = 2;
}

message RoleLoginAck {
	uint32   RetCode = 1;
	uint64   AccountID = 2;
	uint64   RoleID = 3;
	int32    Carrer = 4;
	int32    Level = 5;
	int64    Exp = 6;
	string   Name = 7;
	int32    VipLvl = 8;
	int32    VipExp = 9;
	int64    FightValue =  10;
	repeated int64 Money = 11;
	repeated int64 Action = 12;
	repeated int64 Actime = 13;
	repeated EquipItem EquipList = 14;
	repeated PetItem PetList = 15;
	repeated PartnerItem PartnerList = 16;
	repeated BagItem BagItemList = 17;
}